--- a/front-end/src/app/patient/patient.component.html
+++ b/front-end/src/app/patient/patient.component.html
@@ -1,4 +1,18 @@
 <!-- component -->
-<div>
-  <app-patient-table></app-patient-table>
+<div class="w-full">
+  <div class="font-sans">
+    <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate">
+      Patients
+    </h1>
+  </div>
+  <div class="flex justify-end h-10 w-full space-x-2">
+    <add-button (click)="openPatientForm()"></add-button>
+    <edit-button (click)="openPatientForm()"></edit-button>
+  </div>
+  <div>
+    <app-patient-table></app-patient-table>
+  </div>
+  <div>
+    <app-patient-form></app-patient-form>
+  </div>
 </div>
