--- a/front-end/src/app/sidebar/sidebar.component.html
+++ b/front-end/src/app/sidebar/sidebar.component.html
@@ -1,12 +1,12 @@
  <div class="bg-gray-200">
     <div class="flex flex-col sm:flex-row sm:justify-around">
-      <div class="w-64 h-screen bg-gray-800 mt-8 sm:mt-0">
+      <div class="w-64 h-screen bg-green-900 mt-8 sm:mt-0">
         <div class="flex items-center justify-center mt-10">
           <img class="h-6" alt="HNC Medical Services"  src="https://premium-tailwindcomponents.netlify.app/assets/svg/tailwindcomponent-light.svg">
         </div>
 
         <nav class="mt-10">
-          <a class="flex items-center py-2 px-8 bg-gray-700 text-gray-100 border-r-4 border-gray-100" href="#">
+          <a class="flex items-center py-2 px-8 bg-gray-700 text-white border-r-4 border-gray-100" href="#">
               <svg class="h-5 w-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M19 11H5M19 11C20.1046 11 21 11.8954 21 13V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V13C3 11.8954 3.89543 11 5 11M19 11V9C19 7.89543 18.1046 7 17 7M5 11V9C5 7.89543 5.89543 7 7 7M7 7V5C7 3.89543 7.89543 3 9 3H15C16.1046 3 17 3.89543 17 5V7M7 7H17"
