--- a/front-end/src/app/base-layout/base-layout.component.html
+++ b/front-end/src/app/base-layout/base-layout.component.html
@@ -1,7 +1,9 @@
 <header class="w-full bg-gray-800 p-4 flex justify-between items-center">
   <nav class="flex items-center">
-    <img class="w-7 h-7"
-         src="https://www.solarwinds.com/-/media/solarwinds/swdcv2/licensed-products/service-desk/integrations/sd-integrations-logo-jira.ashx?rev=701fbaa7f8ac4ae08e0406c8984c43e7&hash=75D4F04DE99B88DE7B2C4193F0616F1F"/>
+    <div class="mt-2">
+      <img class="w-20 h-20"
+           src="../../assets/hnc_logo_white.png"/>
+    </div>
     <div class="text-white text-xs hidden sm:block ml-2">
 <!--      <a href="#" class="bg-gray-900 hover:bg-gray-700 p-2 rounded cursor-pointer">Dashboard</a>-->
 <!--      <a href="#" class="bg-gray-900 hover:bg-gray-700 p-2 rounded cursor-pointer ml-1">Projects</a>-->
