--- a/front-end/src/app/patient/patient-form/patient-form.component.html
+++ b/front-end/src/app/patient/patient-form/patient-form.component.html
@@ -1,49 +1,23 @@
-<modal #myModal class="flex">
+<modal #patientFormModal class="flex">
   <modal-header>Add/Edit Patient</modal-header>
   <modal-content class="w-full">
     <!-- component -->
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
-      <div class="w-full mx-auto ">
+      <div class="w-full">
         <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-blueGray-100 border-0">
-          <div class="rounded-t bg-white mb-0 px-6 py-6">
-            <div class="text-center flex justify-between">
-              <h6 class="text-blueGray-700 text-xl font-bold">
-                My account
-              </h6>
-              <button class="bg-pink-500 text-white active:bg-pink-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 ease-linear transition-all duration-150" type="button">
-                Settings
-              </button>
-            </div>
-          </div>
           <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
             <form>
               <h6 class="text-blueGray-400 text-sm mt-3 mb-6 font-bold uppercase">
-                User Information
+                Patient Information
               </h6>
               <div class="flex flex-wrap">
                 <div class="w-full lg:w-6/12 px-4">
                   <div class="relative w-full mb-3">
-                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
-                      Username
-                    </label>
-                    <input type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="lucky.jesse">
-                  </div>
-                </div>
-                <div class="w-full lg:w-6/12 px-4">
-                  <div class="relative w-full mb-3">
-                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
-                      Email address
-                    </label>
-                    <input type="email" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="jesse@example.com">
-                  </div>
-                </div>
-                <div class="w-full lg:w-6/12 px-4">
-                  <div class="relative w-full mb-3">
-                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
+                    <label class="label" htmlfor="grid-password">
                       First Name
                     </label>
-                    <input type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="Lucky">
+                    <input id="firstName" name="first_name" [(ngModel)]="selectedPatient.first_name" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
                 <div class="w-full lg:w-6/12 px-4">
@@ -51,7 +25,15 @@
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
                       Last Name
                     </label>
-                    <input type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="Jesse">
+                    <input name="last_name" [(ngModel)]="selectedPatient.last_name" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
+                  </div>
+                </div>
+                <div class="w-full lg:w-6/12 px-4">
+                  <div class="relative w-full mb-3">
+                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
+                      Date of Birth
+                    </label>
+                    <input name="date_of_birth" [(ngModel)]="selectedPatient.date_of_birth" type="date" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
               </div>
@@ -67,49 +49,36 @@
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
                       Address
                     </label>
-                    <input type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
+                    <input name="address" [(ngModel)]="selectedPatient.address" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
                 <div class="w-full lg:w-4/12 px-4">
                   <div class="relative w-full mb-3">
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
-                      City
+                      Mobile
                     </label>
-                    <input type="email" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="New York">
-                  </div>
-                </div>
-                <div class="w-full lg:w-4/12 px-4">
-                  <div class="relative w-full mb-3">
-                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
-                      Country
-                    </label>
-                    <input type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="United States">
-                  </div>
-                </div>
-                <div class="w-full lg:w-4/12 px-4">
-                  <div class="relative w-full mb-3">
-                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
-                      Postal Code
-                    </label>
-                    <input type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="Postal Code">
+                    <input name="mobile" [(ngModel)]="selectedPatient.mobile" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
               </div>
-
               <hr class="mt-6 border-b-1 border-blueGray-300">
-
               <h6 class="text-blueGray-400 text-sm mt-3 mb-6 font-bold uppercase">
-                About Me
+                Special Notices
               </h6>
               <div class="flex flex-wrap">
                 <div class="w-full lg:w-12/12 px-4">
                   <div class="relative w-full mb-3">
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
-                      About me
+                      Special Notices
                     </label>
-                    <textarea type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" rows="4"> A beautiful UI Kit and Admin for JavaScript &amp; Tailwind CSS. It is Freeand Open Source.</textarea>
+                    <input name="special_notices" [(ngModel)]="selectedPatient.special_notices" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
+              </div>
+              <hr class="mt-3 border-b-1 border-blueGray-300">
+              <div class="flex flex-wrap mt-3 w-full justify-end space-x-4">
+                    <button (click)="handleSave()" class="py-3 px-6 text-white rounded-lg bg-green-500 shadow-lg block md:inline-block">Save</button>
+                    <button type="reset" class="py-3 px-6 text-white rounded-lg bg-yellow-600 shadow-lg block md:inline-block">Clear</button>
               </div>
             </form>
           </div>
