--- a/front-end/src/app/doctor/doctor.component.html
+++ b/front-end/src/app/doctor/doctor.component.html
@@ -1,1 +1,18 @@
-<p>doctor works!</p>
+<!-- component -->
+<div class="w-full">
+  <div class="font-sans">
+    <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate">
+      Doctors
+    </h1>
+  </div>
+  <div class="flex justify-end h-10 w-full space-x-2 items-center">
+    <span>Add new Doctor</span>
+    <add-button></add-button>
+  </div>
+  <div>
+    <app-doctor-table [doctors]="doctors" (select-doctor)="selectedDoctor = $event"></app-doctor-table>
+  </div>
+  <div>
+    <app-doctor-form [selectedDoctor]="selectedPatient" (patientFormEvent)="closeModal()"></app-doctor-form>
+  </div>
+</div>
