--- a/front-end/src/app/patient/patient-form/patient-form.component.html
+++ b/front-end/src/app/patient/patient-form/patient-form.component.html
@@ -17,7 +17,7 @@
                     <label class="label" htmlfor="grid-password">
                       First Name
                     </label>
-                    <input id="firstName" name="first_name" [(ngModel)]="selectedPatient.first_name" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
+                    <input id="firstName" name="first_name" [(ngModel)]="form.first_name" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
                 <div class="w-full lg:w-6/12 px-4">
@@ -25,7 +25,7 @@
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
                       Last Name
                     </label>
-                    <input name="last_name" [(ngModel)]="selectedPatient.last_name" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
+                    <input name="last_name" [(ngModel)]="form.last_name" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
                 <div class="w-full lg:w-6/12 px-4">
@@ -33,7 +33,7 @@
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
                       Date of Birth
                     </label>
-                    <input name="date_of_birth" [(ngModel)]="selectedPatient.date_of_birth" type="date" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
+                    <input name="date_of_birth" [(ngModel)]="form.date_of_birth" type="date" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
               </div>
@@ -49,7 +49,7 @@
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
                       Address
                     </label>
-                    <input name="address" [(ngModel)]="selectedPatient.address" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
+                    <input name="address" [(ngModel)]="form.address" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
                 <div class="w-full lg:w-4/12 px-4">
@@ -57,7 +57,7 @@
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
                       Mobile
                     </label>
-                    <input name="mobile" [(ngModel)]="selectedPatient.mobile" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
+                    <input name="mobile" [(ngModel)]="form.mobile" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
               </div>
@@ -71,7 +71,7 @@
                     <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlfor="grid-password">
                       Special Notices
                     </label>
-                    <input name="special_notices" [(ngModel)]="selectedPatient.special_notices" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
+                    <input name="special_notices" [(ngModel)]="form.special_notices" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150">
                   </div>
                 </div>
               </div>
